--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ google-auth==2.29.0
 google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.1
 googleapis-common-protos==1.63.0
+html2text>=2024.2.26
 html-table-extractor==1.4.1
 html-table-parser-python3==0.3.1
 httplib2==0.22.0
