--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ install_requires =
     boto3>=1.35.32
     google-api-python-client>=2.147.0
     google-auth-oauthlib>=1.2.1
+    html2text>=2024.2.26
     html-table-parser-python3>=0.3.1
     Jinja2>=3.1.3
     jsonpickle>=3.3.0
