--- a/schemes/confluence-scheme-1.0.yaml
+++ b/schemes/confluence-scheme-1.0.yaml
@@ -118,7 +118,7 @@ scheme:
                 name: "version-date"
                 tags:
                   - "version-date"
-                  - "validate-as-data"
+                  - "validate-as-date"
               value: 
                 get-data:
                   query:
